# miniclip

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: eval.yaml  train_bc.yaml  train_vla.yaml
docs/: architecture.md  environments.md  index.md  results.md  training.md
mimicplay/: __init__.py  cli.py
mimicplay/dashboard/: __init__.py  app.py
mimicplay/data/: __init__.py  augmentation.py  dataset.py  recorder.py
mimicplay/envs/: __init__.py  base.py  build_bridge.py  dodge_runner.py  grid_collector.py
mimicplay/evaluation/: __init__.py  compare.py  evaluator.py  gradcam.py
mimicplay/models/: __init__.py  bc_policy.py  encoders.py  vla_policy.py
mimicplay/training/: __init__.py  scheduler.py  trainer.py
tests/: test_dataset.py  test_envs.py  test_models.py  test_recorder.py
